--- a/app/src/main/res/xml/pref_region_language.xml
+++ b/app/src/main/res/xml/pref_region_language.xml
@@ -16,12 +16,21 @@
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
     <ListPreference
-        android:defaultValue="1"
+        android:defaultValue="@string/pref_title_country_default_value"
         android:entries="@array/pref_example_list_titles"
         android:entryValues="@array/pref_example_list_values"
-        android:key="example_list"
+        android:key="country"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_add_friends_to_messages" />
+    <ListPreference
+        android:defaultValue="@string/pref_title_language_default_value"
+        android:entries="@array/pref_list_language"
+        android:entryValues="@array/pref_list_language_values"
+        android:key="language"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="@string/pref_title_language" />
+
 
 </PreferenceScreen>
