--- a/app/src/main/res/xml/pref_images_videos.xml
+++ b/app/src/main/res/xml/pref_images_videos.xml
@@ -1,10 +1,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
-        android:defaultValue="180"
+        android:defaultValue="@string/pref_image_default_value"
         android:entries="@array/pref_sync_frequency_titles"
         android:entryValues="@array/pref_sync_frequency_values"
-        android:key="sync_frequency"
+        android:key="poster_size"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_sync_frequency" />
