- Check for update feature added

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -40,7 +40,7 @@
         <menu>
             <item
                 android:id="@+id/nav_about_us"
-                android:title="@string/nav_about_us" />
+                android:title="About Us" />
             <!--<item-->
                 <!--android:id="@+id/nav_privacy_policy"-->
                 <!--android:title="@string/privacy_policy" />-->
