--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="101"
-        android:title="@string/nav_settings"
+        android:title="Settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_about_us"
