--- a/app/src/main/res/layout/activity_tvshow_details.xml
+++ b/app/src/main/res/layout/activity_tvshow_details.xml
@@ -161,7 +161,14 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/tv_show_accent"
                 />
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewGenre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                />
             <com.merakiphi.idiotbox.other.CustomTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
