--- a/app/src/main/res/layout/activity_episode.xml
+++ b/app/src/main/res/layout/activity_episode.xml
@@ -207,8 +207,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"/>
 
+
+
                 </LinearLayout>
             </RelativeLayout>
+
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="SMART_BANNER"
+                ads:adUnitId="ca-app-pub-3259009684379327/8932552299">
+            </com.google.android.gms.ads.AdView>
 
 
         </LinearLayout>
