- User authentication with TMDb API - Getting the session id - Favorite icon for movies made

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:ads="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <ScrollView
         android:id="@+id/container"
@@ -194,6 +196,16 @@
                 android:paddingRight="16dp"
                 android:paddingBottom="16dp"
                 />
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="SMART_BANNER"
+                ads:adUnitId="ca-app-pub-3259009684379327/8932552299">
+            </com.google.android.gms.ads.AdView>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -279,16 +291,7 @@
                 android:id="@+id/recyclerViewSimilar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-            <com.google.android.gms.ads.AdView
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/adView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                ads:adSize="SMART_BANNER"
-                ads:adUnitId="ca-app-pub-3259009684379327/8932552299">
-            </com.google.android.gms.ads.AdView>
+
 
         </LinearLayout>
 
@@ -299,6 +302,15 @@
         android:layout_height="120dp"
         android:background="@drawable/upper"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentStart="true"/>
+    <View
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/upper"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:rotation="90"/>
 
-</FrameLayout>
+
+
+</RelativeLayout>
