--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="tv_show_accent">#00E5FF</color>
     <color name="white">#ffffff</color>
     <color name="textColor">#9E9E9E</color>
+    <color name="tmdbColor">#01d277</color>
+    <color name="favorite">#E57373</color>
+
 </resources>
