- Getting the favorite of a user

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -14,6 +14,11 @@
         android:title="Tv Show" />
 
     <item
+        android:id="@+id/navigation_wishlist"
+        android:icon="@drawable/ic_face_white_36dp"
+        android:title="Wishlist" />
+
+    <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_face_white_36dp"
         android:title="Profile" />
