--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,17 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/buttonLogin"
+    <com.merakiphi.idiotbox.other.CustomTextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/tmdbColor"
-        android:text="Success"
-        android:layout_centerVertical="true"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        tools:layout_editor_absoluteY="192dp"
+        tools:layout_editor_absoluteX="72dp"
+        android:layout_marginTop="61dp"
+        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true" />
-
-
 </RelativeLayout>
